Bug 119169 - Impress 6.1 CRASH when editing bulleted list ( steps in comment 4)
Summary: Impress 6.1 CRASH when editing bulleted list ( steps in comment 4)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:6.2.0 target:6.1.1
Keywords: bibisected, bisected, haveBacktrace, needUITest, regression
Depends on:
Blocks:
 
Reported: 2018-08-09 10:08 UTC by freibadschwimmer
Modified: 2018-08-15 10:55 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
affected test file where slide has been copied from a Microsoft template, converted into an odp file (22.75 KB, application/vnd.oasis.opendocument.presentation)
2018-08-09 10:08 UTC, freibadschwimmer
Details
gdb backtrace (45.17 KB, text/plain)
2018-08-09 12:18 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description freibadschwimmer 2018-08-09 10:08:13 UTC
Created attachment 144058 [details]
affected test file where slide has been copied from a Microsoft template, converted into an odp file

Since the upgrade of Libreoffice to version 6.1, I can hardly edit my presentation files any longer in Impress.
Whenever using the backspace key or delete key to edit the order of a bulleted list, the program keeps crashing. This happens on 2 different computers with all of (tested) presentation files, that once where converted from Microsoft Office format to odp files.

File created in Libreoffice from scratch work normally, but all files that I once converted from Microsoft Office format can not be edited any longer.

After installing again Libreoffice 6.0 all files work again normal, so the problem only occurs since 6.1.
Comment 1 Xisco Faulí 2018-08-09 11:48:51 UTC
I can't reproduce it in

Versión: 6.1.0.3
Id. de compilación: efb621ed25068d70781dc026f7e9c5187a4decd1
Subprocs. CPU: 1; SO: Windows 6.1; Repres. IU: predet.; 
Configuración regional: es-ES (es_ES); Calc: group threaded


To be certain the reported issue is not
related to corruption in the user profile, could you please reset your
Libreoffice profile ( https://wiki.documentfoundation.org/UserProfile ) and
re-test?

I have set the bug's status to 'NEEDINFO'. Please change it back to
'UNCONFIRMED' if the issue is still present
Comment 2 Xisco Faulí 2018-08-09 11:52:44 UTC
oh wait,

Reproduced in

Version: 6.2.0.0.alpha0+
Build ID: c86a47a9d3debbc7e8ee6247f573e7f98c611f19
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded

thus, only linux
Comment 3 Xisco Faulí 2018-08-09 12:08:56 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=e278df1a14c5cb5dbb7add5d6ed5dd52da131e92

author	Noel Grandin <noel.grandin@collabora.co.uk>	2018-04-04 11:17:15 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2018-04-04 13:28:52 +0200
commit e278df1a14c5cb5dbb7add5d6ed5dd52da131e92 (patch)
tree 10ca8af6f78a576fb9c11ffbeffd02a30e3fb5c6
parent 891e41fac81fbd8d5cdb277b26639abfd25a7143 (diff)
tdf#108608 Draw file unresponsive on large text pasted into textbox

Bisected with: bibisect-linux64-6.1

Adding Cc: to Noel Grandin
Comment 4 Xisco Faulí 2018-08-09 12:12:34 UTC
Steps to reproduce:
1. Open the attached document
2. Place the cursor before LibreOffice in the second line
3. Use backspace 2 or 3 times
CRASH!
Comment 5 Xisco Faulí 2018-08-09 12:18:48 UTC
Created attachment 144061 [details]
gdb backtrace
Comment 6 Commit Notification 2018-08-10 16:41:40 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=36a2af004e1a7b17a71d8327c7ae2b6091ab0ffa

tdf#119169 impress, crash when editing bulleted list

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2018-08-11 09:50:46 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=22b9bee790a6b63b11369a7ae7257ceaef9d8585&h=libreoffice-6-1

tdf#119169 impress, crash when editing bulleted list

It will be available in 6.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 freibadschwimmer 2018-08-14 14:24:32 UTC
Thanks a lot for looking into the issue and for providing a fix so rapidly!

Just tested:

 Version: 6.1.1.0.0+
Build ID: bb95d1843e5812c9f2bbecdff80f59b83be013db
CPU threads: 4; OS: Linux 4.17; UI render: default; VCL: kde4; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:libreoffice-6-1

and now the files which earlier caused the issue seem to work perfectly fine.

Thanks a lot for the fix!
Comment 9 Xisco Faulí 2018-08-15 10:55:30 UTC
Verified in

Version: 6.2.0.0.alpha0+
Build ID: 18e20676024baecaf5719139f80f053f5f1e784a
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

@Noel Grandin, Thanks for fixing this!!