tdf#119169 impress, crash when editing bulleted list

regression from
    commit e278df1a14c5cb5dbb7add5d6ed5dd52da131e92
    tdf#108608 Draw file unresponsive on large text pasted into textbox

Somewhere up in the accessibility code it has a stale paragraph index.
Judging up other code in this class, that is fairly common, so just add
similar safety checks.
The old code (pre-regression) only worked because it iterated over all
paragraphs, and it just ignored the paragraph index.

Change-Id: I51c573b95f976fa87228e4f7e9f33bd6ea0dc3c8
Reviewed-on: https://gerrit.libreoffice.org/58836
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit 36a2af004e1a7b17a71d8327c7ae2b6091ab0ffa)